--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sentence-transformers>=2.2.0
 pymorphy2>=0.9.1
 numpy>=1.24.0
 faiss-cpu>=1.7.4
-streamlit>=1.28.0
+streamlit
 torch>=2.0.0
 openpyxl>=3.1.0  # Для чтения Excel в pandas
 psutil
