--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas>=2.0.0
-requests>=2.28.0
-sentence-transformers>=2.2.0
-pymorphy2>=0.9.1
-numpy>=1.24.0
-faiss-cpu>=1.7.4
+# requirements.txt
 streamlit
-torch>=2.0.0
-openpyxl>=3.1.0  # Для чтения Excel в pandas
+pandas
+openpyxl
+sentence-transformers
+requests
+pymorphy2
+gdown
+torch
 psutil
